introduce userContext for state management in projectService and test cases. Adapt test names to standard naming convention. Remove unnecessary interface to the user class and transfer logic to userService