@@ -24,6 +24,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.8.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
@@ -33,9 +40,10 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.7.0</version>
+      <version>5.8.1</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
@@ -49,9 +57,22 @@
       <version>0.4</version>
     </dependency>
 
-
+    <!-- Mockito dependency for JUnit 5 -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>3.12.4</version>
+      <scope>test</scope>
+    </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>20.1.0</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -59,7 +80,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>9</source>
-                    <target>9</target>
+                    <target>9</target><compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
